# follower

./: .flake8  .gitignore  README.md  analyse.py  check.py  followers.py  pyproject.toml  requirements-dev.txt  setup.cfg
src/follower/: analyse.py  check.py  followers.py  utils.py
