[metadata]
name = erikcas-follower
version = 0.0.1.dev1
author = Erik Castricum
author_email = git@cas-online.nl
url = https://github.com/erikcas/follower
description = A simple tool to do some simple and basic analyses on followers for twitter users.
long_description = file: README.md
long_description_content_type = text/markdown
license = Unknown

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    pytz
    tweepy

[options.extras_require]
development =
    black
    flake8
    isort
    mypy
    types-pytz

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    followers = follower.followers:analyse_user
